Colocação do Icone do game
Uma nova atualização com objetivo de colocar um icone

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <div id="logo"></div>
         <h1>Cardroom</h1>
         <!-- Primeira parte -->
         <div id="load_jogo">
